[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
sdist.include = ["*.pyi"]
wheel.py-api = "cp312"

[project]
name = "caterpillar"
version = "2.0.0-b0"

description="Library to pack and unpack structurized binary data."
authors = [
  { name="MatrixEditor", email="not@supported.com" },
]
readme = "README.md"
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',

    'Programming Language :: Python :: 3.12',
  ]

[project.urls]
"Homepage" = "https://github.com/MatrixEditor/caterpillar"
"API-Docs" = "https://matrixeditor.github.io/caterpillar"

[project.optional-dependencies]
# compression
lzo = [
  "lzallright"
]
crypt = [
  "cryptography"
]
all = [
  "lzallright",
  "cryptography"
]