[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
sdist.include = ["*.pyi", "*.h"]
wheel.py-api = "cp312"
cmake.source-dir = "."

[project]
name = "caterpillar"
version = "2.5.1"

description="Library to pack and unpack structurized binary data."
authors = [{ name = "MatrixEditor" }]
maintainers = [{ name = "MatrixEditor" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
  ]

[project.urls]
"Homepage" = "https://github.com/MatrixEditor/caterpillar"
"API-Docs" = "https://matrixeditor.github.io/caterpillar"

[project.optional-dependencies]
# compression
lzo = [
  "lzallright"
]
crypt = [
  "cryptography"
]
all = [
  "lzallright",
  "cryptography"
]